--- a/docker-compose.postgres.yml
+++ b/docker-compose.postgres.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   postgres:
-    image: postgres
+    image: postgres:13.1-alpine
     restart: always
     expose:
       - '5432'
@@ -12,7 +12,7 @@ services:
     environment:
       POSTGRES_PASSWORD: postgres
   redis:
-    image: 'redis:latest'
+    image: 'redis:6.0.9'
   api:
     expose:
       - '3030'
